// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circle should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <circle
        cx=\\"0\\" cy=\\"0\\"
        r=\\"200\\"
        
      />
      </svg>
      "
`;

exports[`constructor should snapshot defaults 1`] = `
Object {
  "attributes": Object {},
  "container": "body",
  "contents": Array [],
  "height": 800,
  "viewBox": "0 0 800 800",
  "width": 800,
}
`;

exports[`ellipse should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <ellipse
        cx=\\"0\\" cy=\\"0\\"
        rx=\\"200\\" ry=\\"400\\"
        
      />
      </svg>
      "
`;

exports[`group should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <g >
<circle
        cx=\\"0\\" cy=\\"0\\"
        r=\\"10\\"
        
      />
</g>
      </svg>
      "
`;

exports[`groupStart and groupEnd should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <g >
<circle
        cx=\\"0\\" cy=\\"0\\"
        r=\\"10\\"
        
      />
</g>
      </svg>
      "
`;

exports[`line should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <line
        x1=\\"0\\" y1=\\"0\\"
        x2=\\"200\\" y2=\\"200\\"
        
      />
      </svg>
      "
`;

exports[`markup should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        
      </svg>
      "
`;

exports[`path should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <path d=\\"M 10 10 H 90 V 90 H 10 L 10 10\\" />
      </svg>
      "
`;

exports[`polygon should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <polygon points=\\"0,100 50,25 50,75 100,0\\"  />
      </svg>
      "
`;

exports[`polyline should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <polyline points=\\"0,100 50,25 50,75 100,0\\"  />
      </svg>
      "
`;

exports[`rect should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <rect
        x=\\"0\\" y=\\"0\\"
        height=\\"400\\" width=\\"200\\"
        
      />
      </svg>
      "
`;

exports[`square should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <rect
        x=\\"0\\" y=\\"0\\"
        height=\\"200\\" width=\\"200\\"
        
      />
      </svg>
      "
`;

exports[`times should loop x times 1`] = `
Array [
  "<g >",
  0,
  1,
  2,
  3,
  4,
  "</g>",
]
`;

exports[`triangle should match snapshot 1`] = `
"
      <svg
        xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"goodgraphics\\"
        height=\\"800\\" width=\\"800\\"
        viewBox=\\"0 0 800 800\\"
        
      >
        <polyline points=\\"0,-43.30127018922193,-50,43.30127018922193,50,43.30127018922193,0,-43.30127018922193\\"  transform=\\" translate(0 0)\\" />
      </svg>
      "
`;
